unpackaged/objects/Medical_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Issue__c</fullName>
        <label>Date Of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Officer__c</fullName>
        <label>Medical Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Notes</relationshipLabel>
        <relationshipName>Medical_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medical Notes</label>
    <nameField>
        <label>Medical Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>